--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^16.18.58",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "passport": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
